# dograh

./: .gitignore  .gitmodules  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PRIVATE_DEPLOYMENT_PLAN.md  README.md  README.zh-CN.md  docker-compose.override.yaml  docker-compose.yaml  release-please-config.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: post-create.sh  post-start.sh
.github/: release.yml
.github/workflows/: api-tests.yml  docker-image.yml  pr-conventional-labeler.yml  pre-pr-drift-check.yml
api/: .env.example  .env.test.example  Dockerfile  app.py  constants.py  enums.py  pyproject.toml  requirements.txt
api/db/: campaign_client.py  knowledge_base_client.py  models.py  organization_usage_client.py  telephony_configuration_client.py  user_client.py
api/mcp_server/: instructions.py
api/routes/: agent_stream.py  auth.py  knowledge_base.py  main.py  organization_usage.py  public_agent.py  public_embed.py  tool.py  user.py  webrtc_signaling.py  workflow.py  workflow_recording.py
api/schemas/: telephony_config.py  tool.py  workflow.py
api/services/: posthog_client.py  quota_service.py  tool_management.py
docs/: docs.json
scripts/: setup_requirements.ps1  setup_requirements.sh
sdk/python/: pyproject.toml
sdk/python/src/dograh_sdk/: _generated_client.py  _generated_models.py
sdk/python/src/dograh_sdk/typed/: __init__.py  start_call.py
ui/: AGENTS.md  Dockerfile  next.config.ts  openapi-ts.config.ts  package-lock.json  package.json
(+201 files in other folders)
